--- a/MoveStore.WebApi/MoveStore.WebApi.csproj
+++ b/MoveStore.WebApi/MoveStore.WebApi.csproj
@@ -54,10 +54,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AppStart\WebApiConfig.cs" />
+    <Compile Include="Controllers\BaseController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
